# vegapunk-agent

./: .env.example  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt  run.sh
docs/: CONTENT_STRUCTURE_PLAN.md  CUSTOM_MODELS.md  DIRECTORY_STRUCTURE.md  ENHANCED_PROMPTS.md  GITHUB_COPILOT.md  GIT_WORKFLOW.md  IMPLEMENTATION_GUIDE.md  LOCAL_PROXY_SETUP.md  NAMING_PATTERN.md  QUICKSTART.md  README.md  REPO_DIRECTORY.md  RESUME.md  STRUCTURE_COMPARISON.md  TWO_LEVEL_STRUCTURE.md
src/: __init__.py  config.py  graph.py  models.py  prompts.py
src/nodes/: __init__.py  publish_node.py  research_node.py  setup_node.py  synthesis_node.py  writing_node.py
src/tools/: git_operations.py  llm_client.py  state_persistence.py  tavily_client.py  token_utils.py
